--- a/_includes/layouts/post.njk
+++ b/_includes/layouts/post.njk
@@ -1,7 +1,7 @@
 ---
 layout: layouts/base.njk
 ---
-
+<!-- TODO: add author stuff for webmentions -->
 <!-- <div class="content-680 h-entry">
   <h1 class="p-name">{{ title }}</h1>
   <p class="p-summary lead">{{ description }}</p>
