--- a/_includes/layouts/base.njk
+++ b/_includes/layouts/base.njk
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-  <title>{{ renderData.title or title or metadata.title }}</title>
+  <title>sia.studio | {{ renderData.title or title or metadata.title }}</title>
   <meta name="description" content="{{ renderData.description or description or metadata.description }}">
   <meta property="og:description" content="{{ renderData.description or description or metadata.description }}" />
 
