Fix favicon path

--- a/src/_includes/layouts/base.njk
+++ b/src/_includes/layouts/base.njk
@@ -37,7 +37,7 @@
   <meta property="og:image:width" content="1200">
   <meta property="og:image:height" content="630"> -->
 
-  <link rel="icon" href="{{ site.faviconPath }}" type="image/png" />
+  <link rel="icon" href="/images/favicon.png" type="image/png" />
   <link rel="canonical" href="https://sia.studio{{ page.url }}">
 
   <meta name="monetization" content="$pay.stronghold.co/1a1a6b5138fcdc84cb29d9b04a798e65540">
