--- a/src/_includes/productlist.njk
+++ b/src/_includes/productlist.njk
@@ -1,8 +1,8 @@
 {% if prices.length %}
-<section class="[ post-list ] [ pad-top-700 gap-bottom-900 ]">
+<section class="[ pad-top-700 gap-bottom-900 ]">
   <div class="[ inner-wrapper ] [ sf-flow ]">
     <h2 class="[ post-list__heading ] [ text-700 md:text-800 ]">Products</h2>
-    <ol class="[ post-list__items ] [ sf-flow ] [ pad-top-300 ]">
+    <ol class="[ sf-flow ] [ pad-top-300 ] [ product ]">
       {% for price in prices %}
       <li class="post-list__item">
         <h3 class="font-base leading-tight text-600 weight-mid">
@@ -13,8 +13,8 @@
             >{{ price.product.name }}</a
           >
         </h3>
-        <p>{{ price.unit_amount }} cents</p>
-        <img src="{{ price.product.images[0] }}" alt="" />
+        <img src="{{ price.product.images[0] }}" alt="" height="200" width="300" />
+        <p>{{ price.product.description }}</p>
         <form action="/api/createCheckoutSession" method="POST">
           <input
             type="hidden"
@@ -22,7 +22,7 @@
             name="price_id"
             class="hidden"
           />
-          <button type="submit">Buy now</button>
+          <button class="button" type="submit">Buy now {{ price.unit_amount | convertCentsToDollars }}</button>
         </form>
       </li>
       {% endfor %}
