--- a/src/css/index.css
+++ b/src/css/index.css
@@ -307,3 +307,15 @@ code[class*=language-],pre[class*=language-]{color:#f8f8f2;background:none;font-
 h2:hover .direct-link {
   opacity: 1;
 }
+
+.product img {
+  width: 300px;
+  height: 200px;
+  object-fit: cover;
+}
+.product .button {
+  font-size: medium;
+  font-weight: 700;
+  letter-spacing: 0.05em;
+  text-transform: uppercase;
+}
