Switch to cloudinary images and add spam note to thx

--- a/src/_includes/productlist.njk
+++ b/src/_includes/productlist.njk
@@ -13,7 +13,9 @@
             >{{ price.product.name }}</a
           >
         </h3>
-        <img src="{{ price.product.images[0] }}" alt="" height="200" width="300" />
+        <img src="{% src price.product.metadata.mainImage %}"
+          srcset="{% srcset price.product.metadata.mainImage %}"
+          alt="">
         <p>{{ price.product.description }}</p>
         <form action="/api/createCheckoutSession" method="POST">
           <input
