--- a/src/thanks.njk
+++ b/src/thanks.njk
@@ -18,6 +18,7 @@ templateClass: tmpl-post
       <li>The receipt for your purchase</li>
       <li>The download link(s) for your files</li>
     </ol>
+    <p>If you do not see the second email with your downloads within a few minutes of completing payment, please <strong>check your junk folder</strong>. If you continue to have any issues, please contact me at <a href="mailto:sia@sia.studio">sia@sia.studio</a>.</p>
   </div>
 </main>
 
