--- a/src/_includes/layouts/page.njk
+++ b/src/_includes/layouts/page.njk
@@ -3,7 +3,7 @@ layout: layouts/base.njk
 templateClass: tmpl-post
 ---
 
-<div class="content-680">
+<main class="inner-wrapper">
   <section>
     <h1 class="p-name">{{ title }}</h1>
     {{ content | safe }}
@@ -11,4 +11,4 @@ templateClass: tmpl-post
 
   <p><a href="{{ '/' | url }}">← Home</a></p>
 
-</div>
+</main>
