Fix list style and remove social links from nav

--- a/src/_includes/productlist.njk
+++ b/src/_includes/productlist.njk
@@ -2,7 +2,8 @@
 <section class="[ pad-top-700 gap-bottom-900 ]">
   <div class="[ inner-wrapper ] [ sf-flow ]">
     <h2 class="[ post-list__heading ] [ text-700 md:text-800 ]">Products</h2>
-    <ol class="[ pad-top-300 ] [ product ]">
+    <p>Please see our <a href="/faq">frequently asked questions</a> for details on how digital downloads are delivered and our return policy.</p>
+    <ol class="[ pad-top-300 ] [ product ] [ ol-reset ]">
       {% for price in prices %}
       <li class="product-card sf-flow">
         <h3 class="font-base leading-tight text-600 weight-mid">
