--- a/src/_includes/postslist.njk
+++ b/src/_includes/postslist.njk
@@ -2,7 +2,7 @@
   <section class="[ post-list ] [ pad-top-700 gap-bottom-900 ]">
     <div class="[ inner-wrapper ] [ sf-flow ]">
       <h2 class="[ post-list__heading ] [ text-700 md:text-800 ]">{{ postListHeading }}</h2>
-      <ol class="[ post-list__items ] [ sf-flow ] [ pad-top-300 ]" reversed>
+      <ol class="[ post-list__items ] [ sf-flow ] [ pad-top-300 ] [ ol-reset ]" reversed>
         {% for item in postListItems | reverse %}
           <li class="post-list__item">
             <h3 class="font-base leading-tight text-600 weight-mid">
