--- a/src/css/index.css
+++ b/src/css/index.css
@@ -328,6 +328,9 @@ h2:hover .direct-link {
 ol {
   padding-inline-start: 40px;
 }
+ol.ol-reset {
+  padding-inline-start: 0;
+}
 /* .product-card {
   max-width: 300px;
 } */
